--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ lib/
 lib64/
 parts/
 sdist/
+node_modules/
 var/
 wheels/
 *.egg-info/
@@ -110,3 +111,4 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
+
